# LNEGC

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  about.md  lnegc_processor.py  mypy.ini  prompts.txt  prompts.txt.nak  pyproject.toml  pytest.ini  requirements.txt  serve_coverage.py  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: Makefile  README.md  api.rst  conf.py  contribuindo.rst  exemplos.rst  index.rst  instalacao.rst  introducao.rst  licenca.rst  pesquisa.md  uso.rst
docs/boas-praticas/: estrutura.md
docs/especificacao/: GRAMATICA.md  PROCESSADOR.md  PROMPTS.md
docs/exemplos/: componentes.md  entidades.md  fluxos.md
docs/guias/: instalacao.md  uso-avancado.md  uso-basico.md
docs/referencias/: api.md  contribuindo.md  licenca.md
lnegc/: __init__.py  cli.py  config.lnegc  parser.py  processor.py
lnegc/componentes/: validador_cpf.lnegc
lnegc/entidades/: cliente.lnegc
lnegc/interfaces/: repositorio.lnegc
lnegc/src/cli/: __init__.py  main.py
lnegc/src/core/: __init__.py  parser.py  processor.py  prompt_generator.py
lnegc/src/utils/: __init__.py
lnegc/testes/: teste_validador_cpf.lnegc  validador_cpf.test.lnegc
lrponto/.lnegc/: config.lnegc  registro-ponto.lnegc
ponto-teste/.lnegc/: config.lnegc
ponto-teste/src/entities/: Funcionario.lnegc  Ponto.lnegc
tests/: __init__.py  test_cli.py  test_parser.py  test_processor.py
