[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip = [".git", "__pycache__", "build", "dist", "*.egg-info"]
skip_glob = [".venv/*", "venv/*"]
known_first_party = ["lnegc"]
known_third_party = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=lnegc --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 