[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnegc"
version = "0.1.0"
description = "Linguagem Natural Estruturada para Geração de Código"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "LNEGC Team" }
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "tox>=4.0.0",
]

[project.scripts]
lnegc = "lnegc.cli:main"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=lnegc --cov-report=html"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
isolated_build = True

[testenv]
deps =
    pytest>=8.0.0
    pytest-cov>=4.0.0
commands =
    pytest {posargs:tests}
""" 